--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -128,3 +128,4 @@
   <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
+</div>
